# robocup-3d

./: CMakeCache.txt  CMakeLists.txt  Makefile  agentspark  cmake_install.cmake  main.cc  start.sh  start_fat_proxy.sh  start_gazebo.sh  start_penalty.sh  start_penalty_goalie.sh  start_penalty_kicker.sh  start_simple_soccer.sh
audio/: audio.cc  audio.h
behaviors/: behavior.cc  behavior.h  checkfall.cc  gazebobehavior.cc  gazebobehavior.h  kicking.cc  naobehavior.cc  naobehavior.h  pkbehaviors.cc  pkbehaviors.h  simplesoccer.cc  simplesoccer.h  strategy.cc
bodymodel/: bodymodel.cc  bodymodel.h
cmake/: FindRcssnet3d.cmake
headers/: Field.h  headers.cc  headers.h
libs/: README.md
paramfiles/: README.md  defaultParams.txt  defaultParams_t0.txt  defaultParams_t1.txt  defaultParams_t4.txt
parser/: parser.h
rvdraw/: rvdraw.h
skills/: curve3d.h  kick.skl
stats/: kickoff.pl  start-game-me.sh
worldmodel/: worldmodel.cc
